# realtime-person-face-detection

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
captioning/: __init__.py  caption_worker.py  smolvlm_api.py
config/: default.yaml
detectors/: face_detector.py  object_detector.py  yolox_detector.py
recognition/: face_recognition.py
scripts/: download_models.py  enroll.py
tracking/: bytetrack.py
utils/: camera.py  config.py  visualization.py
web/: __init__.py  index.html  launcher.py  server.py
